# Game

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  configure  gameGuessNumber.cpp  gameGuessNumber.h  makefile  wqx_number.cpp
Blackjack/: Blackjack  Blackjack.cpp  CMakeLists.txt  card.cpp  configure_gpp  dealer.cpp  dealer.h  deck.cpp  deck.h  player.cpp  player.h  rule.cpp  rule.h  table.cpp  table.h
Blackjack/include/: card.h  dealer.h  deck.h  player.h  rule.h  table.h
Blackjack/src/: CMakeLists.txt  CMakeLists.txt.bak  card.cpp  dealer.cpp  deck.cpp  player.cpp  rule.cpp  table.cpp
GuessNumber/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  main.py
GuessNumber/include/: GuessNumber.h
GuessNumber/lib/: CMakeLists.txt  GuessNumber.py
GuessNumber/src/: GuessNumber.cpp
Guess_Number/: CMakeLists.txt  GuessNumber.cpp  GuessNumber.h  GuessNumber.py  gameGuessNumber.cpp  main.cpp  main.py  note.txt
Monopoly/: CMakeLists.txt  Monopoly.cpp  note
