# CMakeList.txt : CMake project for Game, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project(GuessNumber)



# Add source to this project's executable.
add_executable (GuessNumber "main.cpp" "GuessNumber.cpp")

# TODO: Add tests and install targets if needed.
